syntax = "proto3";

option go_package = "/reader_service";

import "proto/reader_service/product_reader_messages.proto";

service ProductReaderService {
  rpc CreateProduct(CreateProductReq) returns (CreateProductRes) {};
  rpc DeleteProductByID(DeleteProductByIDReq) returns (DeleteProductByIDRes) {};
  rpc DeactivateProductByID(DeactivateProductByIDReq) returns (DeactivateProductByIDRes) {};
  rpc UpdateProductByID(UpdateProductByIDReq) returns (UpdateProductByIDRes) {};
}